--- a/style.css
+++ b/style.css
@@ -33,14 +33,7 @@ body {
   padding: 2rem;
   font-family: var(--font-family);
   color: var(--dark-color);
-  background: var(
-    radial-gradient(
-        circle,
-        rgba(174, 238, 206, 1) 0%,
-        rgba(174, 148, 233, 1) 100%
-      )
-      ;
-  );
+  background: linear-gradient(lightsalmon, lightseagreen);
 }
 
 .orb-canvas {
